# UniGit

./: .gitignore  .releaserc.cjs  CHANGELOG.md  README.md  cargo_meta.txt  index.html  package-lock.json  package.json  testCommitFile.txt
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: implementation-summary.md  roadmap-plan.md  theme-customization.md  windows-release.md
docs/examples/: aurora-glass-theme.css  aurora-glass-theme.json
scripts/release/: sync-version.mjs
scripts/windows/: build-release.ps1  new-self-signed-cert.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/git/: mod.rs  models.rs  service.rs
src-tauri/windows/: sign-unigit.ps1
src/app/: App.tsx  CommitGraphCanvas.tsx  types.ts
src/app/components/: BranchCommandInfoDialog.tsx  BranchCreateDialog.tsx  BranchDeleteDialog.tsx  BranchPane.tsx  BranchPruneDialog.tsx  CherryPickDialog.tsx  ConflictResolutionDialog.tsx  DetachHeadDialog.tsx  DropLane.tsx  ErrorDetailDialog.tsx  HiddenLocalDialog.tsx  ImagePreviewCompare.tsx  MergeDiscardDialog.tsx  ModelPreviewCompare.tsx  RemoteDetailDialog.tsx  RepoManagerDialog.tsx  StashDialog.tsx  UnityMaterialPreviewCompare.tsx
src/app/hooks/: useChangeWorkbench.ts
src/app/utils/: aiCommitMessage.ts  aiSettings.ts  branchTree.ts  changeList.ts  formatters.ts  localIgnore.ts  themeSettings.ts  uiSettings.ts
src/features/repositories/: api.ts
src/resources/: ExampleMaterial.mat  tree.fbx
(+1 files in other folders)
